--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build:analyze": "vite build --mode analyze"
+    "build:analyze": "vite build --mode analyze",
+    "perf:optimize": "node scripts/optimize-images.cjs",
+    "perf:test": "lhci autorun",
+    "perf:test:mobile": "lhci autorun --config=.lighthouserc-mobile.js",
+    "perf:test:desktop": "lhci autorun --config=.lighthouserc.js",
+    "perf:build": "npm run build && npm run perf:test:desktop && npm run perf:test:mobile"
   },
   "dependencies": {
     "@vueuse/head": "^2.0.0",
@@ -15,7 +20,10 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.15.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "sharp": "^0.34.5",
+    "sharp-cli": "^5.2.0",
     "terser": "^5.44.1",
     "vite": "^7.2.4",
     "vite-plugin-compression": "^0.5.1"
